Navbar background fixed + Overflow corrected

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   /* Brand Colours */
   --accent-colour: #7f5aff;
-  --accent-colour-hover: #346bd9;
+  --accent-colour-hover: #a890ff;
 
   /* Typography */
   --primary-font: "Roboto", sans-serif;
@@ -62,7 +62,6 @@ html {
 }
 
 body {
-  min-height: 100vh;
   background-color: var(--background-colour);
   color: var(--typography-colour);
   font-family: var(--primary-font);
