--- a/src/styles/ThemeToggle.css
+++ b/src/styles/ThemeToggle.css
@@ -16,24 +16,24 @@
   border-radius: 50%;
   padding: 1rem;
   transition: all 0.2s ease;
-  
 }
 
-.theme-btn:hover{
-    transform: translateY(-4px);
-    box-shadow: 0 1rem 3rem #7e5aff0e, 0 0.2rem 0.8rem #9173ff72;
-    
-    background-color: var(--accent-colour);
-    color: white;
+.theme-btn:hover {
+  transform: translateY(-4px);
+  box-shadow:
+    0 1rem 3rem #7e5aff0e,
+    0 0.2rem 0.8rem #9173ff72;
+
+  background-color: var(--accent-colour);
+  color: white;
 }
 
 .theme-btn .material-symbols-outlined {
   font-size: 2rem;
   opacity: 0.8;
   font-variation-settings:
-  'FILL' 0,
-  'wght' 300,
-  'GRAD' 0,
-  'opsz' 24
-  
+    "FILL" 0,
+    "wght" 300,
+    "GRAD" 0,
+    "opsz" 24;
 }
